--- a/学成在线/学成网.html
+++ b/学成在线/学成网.html
@@ -234,7 +234,18 @@
                 </div>
             </div>
         </div>
-        <div class="c2">盒子2</div>
+        <div class="c2">
+            <h4>编程入门</h4>
+            <div>
+                <a href="#">热门</a>
+                <a href="#">初级</a>
+                <a href="#">中级</a>
+                <a href="#">高级</a>
+            </div>
+            <div class="tt1">
+                查看全部
+            </div>
+        </div>
 
     </div>
 </div>
